--- a/templates/centos-mirror.j2
+++ b/templates/centos-mirror.j2
@@ -2,6 +2,7 @@
 # http://www.centos.org/modules/tinycontent/index.php?id=22
 
 SOURCE='us-msync.centos.org::CentOS/'
+#SOURCE='mirror.steadfast.net::centos/'
 DESTINATION='{{ mirror_doc_root }}/CentOS/'
 
 LOCKFILE=/tmp/$(basename ${DESTINATION}).lock
