timeout the rsync command
after 3 hours without I/O instead of waiting indefinitely.

--- a/templates/centos-mirror.j2
+++ b/templates/centos-mirror.j2
@@ -18,6 +18,7 @@ if [[ ! -e $LOCKFILE ]]; then
           --stats            \
           --safe-links       \
           --itemize-changes  \
+          --timeout=10800    \
           ${SOURCE} ${DESTINATION}
 
     if [[ $? -eq 0 ]]; then
